--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,13 @@
     "target": "es6",
     "sourceMap": true,
     "outDir": "./dist",
-    "baseUrl": "./"
+    "baseUrl": "./",
+    "typeRoots": [
+      "node_modules/@types"
+    ],
+    "noUnusedLocals": true,
+    "types": ["node", "jest"],
+    "lib": ["es2017", "dom"]
   },
   "exclude": ["node_modules"]
 }
